# ad-dualrev-th

./: .gitignore  LICENSE  README.md  ad-dualrev-th.cabal  cabal.project  compare_csv.py  dualrev.cabal  generate_table_1.py  hie.yaml  make-anonymous.sh  make-haddock.sh  plot.sh  read_evlog.py
bench/: DFunction.hs  Main.hs  Types.hs
cbits/: gcwatch.c
src/: Kaas.hs
src/Control/Concurrent/: ForkJoin.hs  ThreadPool.hs
src/Data/Array/: Growable.hs
src/Data/Vector/Storable/Mutable/: CAS.hs
src/Language/Haskell/: ReverseAD.hs
src/Language/Haskell/ReverseAD/: TH.hs
src/Language/Haskell/ReverseAD/TH/: Compat.hs  Orphans.hs  Source.hs  Translate.hs
src/Language/Haskell/TH/: Stupid.hs
src/Language/Haskell/TH/Stupid/: Parser.hs
test/: ControlFun.hs  FinDiff.hs  ForwardAD.hs  Framework.hs  GenDAG.hs  Main.hs  Types.hs
test-framework/Test/: Approx.hs  Framework.hs  Parallel.hs
test/Test/: Framework.hs
