cabal-version: 2.0
name:          ad-dualrev-th
version:       0.1.0.0
synopsis:      Implementation of dual-numbers reverse AD for Haskell
description:
  An implementation of the algorithm described in [TODO] using Template Haskell
  to differentiate a subset of Haskell98 code.
homepage:      https://github.com/tomsmeding/ad-dualrev-th
author:        Tom Smeding
maintainer:    Tom Smeding <tom@tomsmeding.com>
copyright:     2022 Tom Smeding
license:       MIT
license-file:  LICENSE
build-type:    Simple
tested-with:   GHC == 9.2.2
extra-source-files:
  README.md

source-repository head
  type: git
  location: https://github.com/tomsmeding/ad-dualrev-th

library
  exposed-modules:
    Language.Haskell.ReverseAD.TH
    Language.Haskell.ReverseAD.TH.Orphans
  hs-source-dirs:
    src
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <4.17
    , containers
    , linear-base
    , ghc-prim
    , mtl
    , some
    , template-haskell
    , vector
  default-language: Haskell2010

library test-framework
  hs-source-dirs: test-framework
  exposed-modules:
    Test.Approx
    Test.Framework
    Test.Parallel
  ghc-options: -Wall -O2
  build-depends:
      base >=4.7 && <4.17
    , clock
    , containers
    , QuickCheck
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    ControlFun
    FinDiff
    ForwardAD
    Types
  ghc-options: -Wall -O2 -threaded -rtsopts
  build-depends:
      base >=4.7 && <4.17
    , dualrev
    , test-framework
    , clock
    , containers
    , QuickCheck
    , template-haskell
  default-language: Haskell2010

benchmark bench
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  other-modules:
    DFunction
    Types
  ghc-options: -Wall -O2 -threaded -rtsopts
  build-depends:
      base >=4.7 && <4.17
    , dualrev
    , test-framework
    , ad ^>= 4.5
    , criterion
    , deepseq
    , QuickCheck
    , template-haskell
  default-language: Haskell2010
