cabal-version: 1.12
name:          dualrev
version:       0.1.0.0
description:   Implementation of dual-numbers reverse AD for Haskell
homepage:      https://git.tomsmeding.com/dualrev
author:        Tom Smeding
maintainer:    Tom Smeding <tom@tomsmeding.com>
copyright:     2022 Tom Smeding
license:       MIT
build-type:    Simple
extra-source-files:
  README.md

source-repository head
  type: git
  location: https://git.tomsmeding.com/dualrev

library
  exposed-modules:
    Language.Haskell.ReverseAD.TH
  hs-source-dirs:
    src
  ghc-options: -Wall
  build-depends:
      base >=4.7 && <4.17
    , containers
    , linear-base
    , ghc-prim
    , some
    , template-haskell
    , th-lift
    , vector
  default-language: Haskell2010

library test-framework
  hs-source-dirs: test-framework
  exposed-modules:
    Test.Approx
    Test.Framework
    Test.Parallel
  ghc-options: -Wall -O2
  build-depends:
      base >=4.7 && <4.17
    , clock
    , containers
    , QuickCheck
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test
  other-modules:
    ControlFun
    FinDiff
    ForwardAD
    Types
  ghc-options: -Wall -O2 -threaded -rtsopts
  build-depends:
      base >=4.7 && <4.17
    , dualrev
    , test-framework
    , clock
    , containers
    , QuickCheck
    , template-haskell
  default-language: Haskell2010

benchmark bench
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: Main.hs
  other-modules:
    DFunction
    Types
  ghc-options: -Wall -O2 -threaded -rtsopts
  build-depends:
      base >=4.7 && <4.17
    , dualrev
    , test-framework
    , ad
    , criterion
    , deepseq
    , QuickCheck
    , template-haskell
  default-language: Haskell2010
